<resources>
    <string name="app_name">EterationCase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Navbar
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>

    //Home
    <string name="search">Search</string>
    <string name="select_filter">Select Filter</string>
    <string name="filters"><b>Filters:</b></string>

    //Cart
    <string name="complete">Complete</string>
    <string name="total_0">Total: 0₺</string>

    //Item_Car
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="car_name">Car Name</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="definitely_not_a_cat">Definitely not a cat</string>

    //Item_Product
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="minus">-</string>
    <string name="plus">+</string>


    //Filter_BottomSheet
    <string name="close">Close</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="old_to_new">Old to new</string>
    <string name="new_to_old">New to old</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="apply">Apply</string>
    <string name="priceDot">Price:</string>


</resources>