<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/applyFiltersButton"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sortByLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/sortByLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sort_by"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterTitle" />

        <RadioGroup
            android:id="@+id/sortByGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortByLabel">

            <RadioButton
                android:id="@+id/sortOldToNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_to_new"
                app:buttonTint="@color/blue" />

            <RadioButton
                android:id="@+id/sortNewToOld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_old"
                app:buttonTint="@color/blue" />

            <RadioButton
                android:id="@+id/sortPriceHighToLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_high_to_low"
                app:buttonTint="@color/blue" />

            <RadioButton
                android:id="@+id/sortPriceLowToHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_low_to_high"
                app:buttonTint="@color/blue" />
        </RadioGroup>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortByGroup" />

        <TextView
            android:id="@+id/brandLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/brand"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortByGroup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brandInputLayout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brandLabel"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brandEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/brands_list"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/brandInputLayout" />

        <View
            android:id="@+id/divider_brand_model"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brands_list" />

        <TextView
            android:id="@+id/modelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/model"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_brand_model" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modelInputLayout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modelLabel"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modelEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/models_list"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/modelInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/applyFiltersButton"
        style="@style/ButtonStyle.EterationCase.Blue.Stroke.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
